socket.io changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,11 @@ spring.datasource.url = jdbc:sqlite:volumes/sqlite.db
 spring.datasource.driver-class-name = org.sqlite.JDBC
 spring.datasource.username = admin
 spring.datasource.password = admin
+spring.main.web-application-type=none
 
-server.port=8085
+
+netty.server.port=8085
+netty.server.host=localhost
+
 
 jwt.secret=nighthawk
